test: respect persisted sample invariants